data/derived/comb/progs/unify/prog1005.ml.out
Characters 513-516:
  if c < 0.0
         ^^^
Error: This expression has type float but an expression was expected of type
         expr
